// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Post /> should render a post 1`] = `
<article>
  <h1>
    <a
      href="/hello-world"
      onClick={[Function]}
    >
      Hello world!
    </a>
  </h1>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Welcome to WordPress. This is your first post. Edit or delete it, then start writing!</p>
",
      }
    }
  />
</article>
`;

exports[`<Post /> should render a post with a plain title when isSingle prop is passed 1`] = `
<article>
  <h1>
    Hello world!
  </h1>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Welcome to WordPress. This is your first post. Edit or delete it, then start writing!</p>
",
      }
    }
  />
</article>
`;
